# backend-master/controllers/orderController.js
@@ -1,7 +1,21 @@
-const orders = [];
+const orders = [
+    {
+        id: 1,
+        userId: 1,
+        nombre: 'Juan',
+        apellido: 'Perez',
+        celular: '123456789',
+        productos: [
+            { id: 1, cantidad: 2 },
+            { id: 2, cantidad: 1 }
+        ],
+        estado:'pendiente',
+        fecha: "19/05/2024"
+    },
+];
 
 exports.createOrder = (req, res) => {
-    const { userId, nombre, apellido, celular, productos } = req.body;
+    const { userId, nombre, apellido, celular, productos, estado, fecha } = req.body;
     
     const newOrder = {
         id: orders.length + 1,
@@ -10,7 +24,8 @@ exports.createOrder = (req, res) => {
         apellido,
         celular,
         productos,
-        fecha: new Date()
+        estado,
+        fecha
     };
 
     orders.push(newOrder);
@@ -23,7 +38,7 @@ exports.getAllOrders = (req, res) => {
 
 
 exports.getOrdersPaginado = (req, res) => {
-    const { page = 1, limit = 10, filterField, filterValue } = req.query;
+    const { page = 1, limit = 10, filterField, filterValue, sortField = 'id', sortDirection = 'asc' } = req.query;
 
     const startIndex = (page - 1) * limit;
     const endIndex = page * limit;
@@ -32,10 +47,35 @@ exports.getOrdersPaginado = (req, res) => {
 
     // Aplicar filtros si existen
     if (filterField && filterValue) {
-        filteredOrders = orders.filter(order => 
-            order[filterField] && order[filterField].toString().toLowerCase().includes(filterValue.toLowerCase())
-        );
+        if (filterField === 'cliente') {
+            const lowerFilterValue = filterValue.toLowerCase();
+            filteredOrders = orders.filter(order => 
+                (`${order.nombre} ${order.apellido}`).toLowerCase().includes(lowerFilterValue)
+            );
+        } else {
+            filteredOrders = orders.filter(order => 
+                order[filterField] && order[filterField].toString().toLowerCase().includes(filterValue.toLowerCase())
+            );
+        }
     }
+
+    // Aplicar ordenación
+    filteredOrders.sort((a, b) => {
+        let aValue = a[sortField];
+        let bValue = b[sortField];
+
+        if (sortField === 'cliente') {
+            aValue = `${a.nombre} ${a.apellido}`;
+            bValue = `${b.nombre} ${b.apellido}`;
+        }
+
+        if (aValue < bValue) {
+            return sortDirection === 'asc' ? -1 : 1;
+        } else if (aValue > bValue) {
+            return sortDirection === 'asc' ? 1 : -1;
+        }
+        return 0;
+    });
 
     const paginatedResults = filteredOrders.slice(startIndex, endIndex);
 
@@ -45,4 +85,39 @@ exports.getOrdersPaginado = (req, res) => {
         total: filteredOrders.length,
         data: paginatedResults
     });
+};
+
+
+exports.getOrdenById = (req, res) => {
+    const { id } = req.params;
+    const order = orders.find(p => p.id == id);
+    if (order) {
+        res.json(order);
+    } else {
+        res.status(404).json({ message: 'Orden no encontrado' });
+    }
+};
+
+
+exports.updateOrden = (req, res) => {
+    const { id } = req.params;
+    const updatedOrden = req.body;
+    const ordenIndex = orders.findIndex(p => p.id == id);
+    if (ordenIndex !== -1) {
+        orders[ordenIndex] = { ...orders[ordenIndex], ...updatedOrden };
+        res.json(orders[ordenIndex]);
+    } else {
+        res.status(404).json({ message: 'Orden no encontrado' });
+    }
+};
+
+exports.deleteOrden = (req, res) => {
+    const { id } = req.params;
+    const ordenIndex = orders.findIndex(p => p.id == id);
+    if (ordenIndex !== -1) {
+        const deletedOrden = orders.splice(ordenIndex, 1);
+        res.json(deletedOrden);
+    } else {
+        res.status(404).json({ message: 'Orden no encontrado' });
+    }
 };
