# backend-master/routes/order.js
@@ -1,7 +1,7 @@
 const express = require('express');
 const router = express.Router();
 const orderController = require('../controllers/orderController');
-const { verifyToken, isUser } = require('../middleware/auth');
+const { verifyToken, isUser, isPanadero } = require('../middleware/auth');
 
 // Ruta para get paginado de ordenes (debe estar antes de las rutas con parámetros)
 router.get('/paginado', verifyToken, isUser, (req, res) => {
@@ -25,7 +25,7 @@ router.post('/', verifyToken, isUser, (req, res) => {
     /* #swagger.parameters['body'] = {
         in: 'body',
         description: 'Create order.',
-        schema: { userId: 1, nombre: 'John', apellido: 'Doe', celular: '123456789', productos: [{ productId: 1, cantidad: 2 }] }
+        schema: { userId: 1, nombre: 'John', apellido: 'Doe', celular: '123456789', productos: [{ productId: 1, cantidad: 2 }], estado: 'pendiente', fecha: "20/06/2024" }
     } */
     orderController.createOrder(req, res);
 });
@@ -33,6 +33,34 @@ router.get('/', verifyToken, isUser, (req, res) => {
     /* #swagger.summary = 'Obtiene todas las órdenes' */
     /* #swagger.tags = ['Ordenes'] */
     orderController.getAllOrders(req, res);
+});
+
+router.get('/:id', verifyToken, isUser, (req, res) => {
+    /* #swagger.summary = 'Obtiene un orden por ID' */
+    /* #swagger.tags = ['Ordenes'] */
+    /* #swagger.parameters['id'] = { description: 'ID del orden', type: 'integer', required: true } */
+    orderController.getOrdenById(req, res);
+});
+
+router.put('/:id', verifyToken, isUser, (req, res) => {
+    /* #swagger.summary = 'Actualiza un orden existente' */
+    /* #swagger.tags = ['Ordenes'] */
+    /* #swagger.security = [{ "BearerAuth": [] }] */
+    /* #swagger.parameters['id'] = { description: 'ID del orden', type: 'integer', required: true } */
+    /* #swagger.parameters['body'] = {
+        in: 'body',
+        description: 'Update product.',
+        schema: { $ref: '#/definitions/Orden' }
+    } */
+        orderController.updateOrden(req, res);
+});
+
+router.delete('/:id', verifyToken, isUser, (req, res) => {
+    /* #swagger.summary = 'Elimina un orden' */
+    /* #swagger.tags = ['Ordenes'] */
+    /* #swagger.security = [{ "BearerAuth": [] }] */
+    /* #swagger.parameters['id'] = { description: 'ID del orden', type: 'integer', required: true } */
+    orderController.deleteOrden(req, res);
 });
 
 module.exports = router;
